# wasgo

./: .gitignore  .gitignore copy  .gitmodules  CMakeLists.txt  LICENSE  README.md  SCsub  config.py  register_types.cpp  register_types.h
TestWasmCode/:  test.wasm  Makefile  OutofBounds.cpp  function_table_builder.py  otherfile.cpp.d  otherfile.h  test.cpp  test.cpp.d  test.wasm
api/: API_Generator.cpp  API_Generator.h  api_generator_v2.py  api_generator_v3.py  function_table_builder.py  test_run.json  wasgo_api.json  wasgo_variant_api.json
doc_classes/: ResourceFormatLoaderWasm.xml  WasGoRuntime.xml  WasGoState.xml  WasmResource.xml
docs/: WasGo Lifecycle Proposal.odt  wasgo_lifecycle.md
include/: wasgo_function_table.h  wasgo_math.h  wasgo_native_wrappers.h
src/: Test.cpp  Test.h  resource_loader_wasm.cpp  resource_loader_wasm.h  resource_wasm.cpp  resource_wasm.h  wasgo_callable.cpp  wasgo_callable.h  wasgo_runtime.cpp  wasgo_runtime.h  wasgo_state.cpp  wasgo_state.h  wasgo_test.cpp  wasgo_test.h  wasm_script.h
tests/: test_wasgo.h  turning_blob.h
wasgo_headers/: ARVRAnchor.cpp  ARVRAnchor.cpp.d  ARVRAnchor.h  ARVRCamera.cpp  ARVRCamera.h  ARVRController.cpp  ARVRController.h  ARVRInterface.cpp  ARVRInterface.h  ARVROrigin.cpp  ARVROrigin.h  ARVRPositionalTracker.cpp  ARVRPositionalTracker.h  ARVRServer.cpp  ARVRServer.h  AStar.cpp  AStar.h  AStar2D.cpp  AStar2D.h  AcceptDialog.cpp  AcceptDialog.h  AnimatedSprite.cpp  AnimatedSprite.h  AnimatedSprite3D.cpp  AnimatedSprite3D.h  AnimatedTexture.cpp  AnimatedTexture.h  Animation.cpp  Animation.h  (+1068 more)
(+206 files in other folders)
